deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peertube
  labels:
    app: peertube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peertube
  template:
    metadata:
      labels:
        app: peertube
    spec:
      containers:
        - name: peertube
          image: chocobozzz/peertube:v3.4.0-rc.1-buster
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
            - containerPort: 9000
              name: peertube
            - containerPort: 1935
              name: rtmp
          volumeMounts:
            - name: peertube-data
              mountPath: /data
        - name: redis
          image: redis:6-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis
      volumes:
        - name: peertube-data
          persistentVolumeClaim:
            claimName: peertube-data
